--- a/index.html
+++ b/index.html
@@ -3,12 +3,52 @@
     <head>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <title>Video Game Ratings</title>
+        <title>Video Games of 2018 Ratings</title>
     </head>
     <body>
         <div class="container">
             <table class="table table-striped">
-                
+                <thead>
+                    <tr>
+                        <th>2018 Video Games </th>
+                        <th>Rating</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="Nintendo">
+                        <td>Super Smash Bros. Ultimate</td>
+                        <td>
+                            <div class="stars-outer">
+                                <div class="stars-inner"></div>
+                                <span class="number-rating"></span>
+                            </div>
+                        </td>
+                    </tr><tr class="Sony">
+                        <td>Spyro Reignited Trilogy</td>
+                        <td>
+                            <div class="stars-outer">
+                                <div class="stars-inner"></div>
+                                <span class="number-rating"></span>
+                            </div>
+                        </td>
+                    </tr><tr class="Microsoft">
+                        <td>Shadow of the Tomb Raider</td>
+                        <td>
+                            <div class="stars-outer">
+                                <div class="stars-inner"></div>
+                                <span class="number-rating"></span>
+                            </div>
+                        </td>
+                    </tr><tr class="Ubisoft">
+                        <td>For Honor</td>
+                        <td>
+                            <div class="stars-outer">
+                                <div class="stars-inner"></div>
+                                <span class="number-rating"></span>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
             </table>
         </div>
         
