added rating.js file

--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
             </table>
         </div>
         
+        <script type="text/javascript" src="rating.js"></script>
     </body>
 </html>
